[package]
name = "plod"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = [ "Peck" ]
repository = "https://github.com/peckpeck/plod"
homepage = "https://github.com/peckpeck/plod"
description = "Plod - deriving plain old data"
documentation = "https://docs.rs/plod/"
readme = "README.md"
keywords = [ "pod", "plain", "endian", "data" ]
categories = [ "data-structures", "encoding", "parsing" ]

[dependencies]
plod_derive = { version = "^0.3", path = "./derive" }
