[package]
name = "plod_derive"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = [ "Peck" ]
repository = "https://github.com/peckpeck/plod"
description = "Plod - deriving plain old data"
readme = "README.md"
keywords = [ "pod" ]

[dependencies]
syn = { version = "^2.0", features = [ "full" ] }
quote = "^1.0"
proc-macro2 = "^1.0"

[lib]
proc-macro = true

