[package]
name = "plod_derive"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = [ "Peck" ]
repository = "https://github.com/peckpeck/plod/tree/main/derive"
homepage = "https://github.com/peckpeck/plod"
documentation = "https://docs.rs/plod_derive/"
description = "Plod - deriving plain old data"
readme = "README.md"
keywords = [ "pod", "plod" ]

[dependencies]
syn = { version = "^2.0", features = [ "full" ] }
quote = "^1.0"
proc-macro2 = "^1.0"

[lib]
proc-macro = true
path = "src/lib.rs"

